disable online exam of new techniques

--- a/researcher/templates/researcher/layouts/add_new_technique.html
+++ b/researcher/templates/researcher/layouts/add_new_technique.html
@@ -37,8 +37,8 @@
                                         <div class="form-group col-md-4">
                                             <input class="close-upload" type="radio" name="confirmation_method"
                                                    id="exam"
-                                                   value="exam" hidden>
-                                            <label for="exam">
+                                                   value="exam" hidden disabled>
+                                            <label for="exam" class="disabled">
                                                 <span class="title">درخواست آزمون آنلاین</span>
                                             </label>
                                         </div>
@@ -59,6 +59,8 @@
                                             </label>
                                         </div>
                                     </div>
+                                    <small class="s-90 text-danger mb-2 d-block">* متاسفانه امکان «درخواست آزمون آنلاین»
+                                        در حال حاضر فراهم نیست. لطفا از دو حالت احراز دیگر استفاده کنید.</small>
                                 </div>
                             </div>
                         </div>
