--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4652,6 +4652,10 @@ span.border-span {
     background-color: #eee;
 }
 
+small.s-90 {
+    font-size: 90%;
+}
+
 .cbx {
     -webkit-user-select: none;
     user-select: none;
