--- a/static/researcher/css/style.css
+++ b/static/researcher/css/style.css
@@ -1011,9 +1011,18 @@ input.vote-select[value='5'] + label:hover, input.vote-select[value='5']:checked
     background-color: #FDFDFD;
 }
 
+.modal .confirmation label.disabled {
+    background-color: #eeeeee;
+}
+
 .modal .confirmation label:hover {
     cursor: pointer;
     box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.16);
+}
+
+.modal .confirmation label.disabled:hover {
+    cursor: default;
+    box-shadow: none;
 }
 
 .modal .upload-resume + label {
