debug project carts header style

--- a/expert/templates/expert/index.html
+++ b/expert/templates/expert/index.html
@@ -62,16 +62,18 @@
                                     <h6>
                                         {{ project.project_form.persian_title }}
                                     </h6>
-                                    {% calculate_date_past project.date_submitted_by_industry as date_past %}
-                                    <div class="data-modified">
-                                        <span>{{ date_past }} قبل </span>
-                                    </div>
-                                    <div class="notification">
-                                        <i class="far fa-comment-alt center-abs"></i>
-                                        {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
-                                        {% if UnseenComments != 0 %}
-                                            <span class="unseen-comments"> {{ UnseenComments }} </span>
-                                        {% endif %}
+                                    <div class="box-option-container">
+                                        <div class="notification">
+                                            <i class="far fa-comment-alt center-abs"></i>
+                                            {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
+                                            {% if UnseenComments != 0 %}
+                                                <span class="unseen-comments"> {{ UnseenComments }} </span>
+                                            {% endif %}
+                                        </div>
+                                        {% calculate_date_past project.date_submitted_by_industry as date_past %}
+                                        <div class="data-modified">
+                                            <span>{{ date_past }} قبل </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="box-body">
@@ -138,16 +140,18 @@
                                     <h6>
                                         {{ project.project_form.persian_title }}
                                     </h6>
-                                    {% calculate_date_past project.date_submitted_by_industry as date_past %}
-                                    <div class="data-modified">
-                                        <span>{{ date_past }} قبل </span>
-                                    </div>
-                                    <div class="notification">
-                                        <i class="far fa-comment-alt center-abs"></i>
-                                        {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
-                                        {% if UnseenComments != 0 %}
-                                            <span class="unseen-comments"> {{ UnseenComments }} </span>
-                                        {% endif %}
+                                    <div class="box-option-container">
+                                        <div class="notification">
+                                            <i class="far fa-comment-alt center-abs"></i>
+                                            {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
+                                            {% if UnseenComments != 0 %}
+                                                <span class="unseen-comments"> {{ UnseenComments }} </span>
+                                            {% endif %}
+                                        </div>
+                                        {% calculate_date_past project.date_submitted_by_industry as date_past %}
+                                        <div class="data-modified">
+                                            <span>{{ date_past }} قبل </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="box-body">
@@ -207,16 +211,18 @@
                                     <h6>
                                         {{ project.project_form.persian_title }}
                                     </h6>
-                                    {% calculate_date_past project.date_submitted_by_industry as date_past %}
-                                    <div class="data-modified">
-                                        <span>{{ date_past }} قبل </span>
-                                    </div>
-                                    <div class="notification">
-                                        <i class="far fa-comment-alt center-abs"></i>
-                                        {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
-                                        {% if UnseenComments != 0 %}
-                                            <span class="unseen-comments"> {{ UnseenComments }} </span>
-                                        {% endif %}
+                                    <div class="box-option-container">
+                                        <div class="notification">
+                                            <i class="far fa-comment-alt center-abs"></i>
+                                            {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
+                                            {% if UnseenComments != 0 %}
+                                                <span class="unseen-comments"> {{ UnseenComments }} </span>
+                                            {% endif %}
+                                        </div>
+                                        {% calculate_date_past project.date_submitted_by_industry as date_past %}
+                                        <div class="data-modified">
+                                            <span>{{ date_past }} قبل </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="box-body">
@@ -272,16 +278,18 @@
                                     <h6>
                                         {{ project.project_form.persian_title }}
                                     </h6>
-                                    {% calculate_date_past project.date_submitted_by_industry as date_past %}
-                                    <div class="data-modified">
-                                        <span>{{ date_past }} قبل </span>
-                                    </div>
-                                    <div class="notification">
-                                        <i class="far fa-comment-alt center-abs"></i>
-                                        {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
-                                        {% if UnseenComments != 0 %}
-                                            <span class="unseen-comments"> {{ UnseenComments }} </span>
-                                        {% endif %}
+                                    <div class="box-option-container">
+                                        <div class="notification">
+                                            <i class="far fa-comment-alt center-abs"></i>
+                                            {% getUnseenComments project.pk request.user.expertuser as UnseenComments %}
+                                            {% if UnseenComments != 0 %}
+                                                <span class="unseen-comments"> {{ UnseenComments }} </span>
+                                            {% endif %}
+                                        </div>
+                                        {% calculate_date_past project.date_submitted_by_industry as date_past %}
+                                        <div class="data-modified">
+                                            <span>{{ date_past }} قبل </span>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="box-body">
