--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3156,10 +3156,25 @@ div.no-project > span.disable-border-button {
 }
 
 .box .box-header {
-    display: block;
+    display: flex;
     border-bottom: 1px solid #00000033;
     padding: 10px 15px;
     margin: 0 5px;
+}
+
+@media (max-width: 700px) {
+    .box .box-header {
+        display: block;
+    }
+}
+
+.box .box-header div.box-option-container {
+    display: flex;
+    margin-right: auto;
+}
+
+.box .box-header div.box-option-container > *:first-child {
+    margin-right: auto;
 }
 
 .box.has-image .box-header {
@@ -3185,7 +3200,18 @@ div.no-project > span.disable-border-button {
 .box .box-header h6,
 .box .box-header h5 {
     display: inline-block;
-    margin: 0;
+    margin: 0 0 0 1rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+@media (max-width: 700px) {
+    .box .box-header h6,
+    .box .box-header h5 {
+        text-align: justify;
+        white-space: unset;
+    }
 }
 
 .box .box-header div.data-modified {
@@ -3893,6 +3919,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3904,6 +3931,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3915,6 +3943,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3926,6 +3955,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3937,6 +3967,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3948,6 +3979,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     border-radius: 50%;
@@ -3959,6 +3991,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     float: left;
@@ -3990,6 +4023,7 @@ a.top-button i {
     position: relative;
     top: 50%;
     left: 0;
+    transform: translateY(-50%);
     width: 20px;
     height: 20px;
     float: left;
