--- a/researcher/templates/researcher/index.html
+++ b/researcher/templates/researcher/index.html
@@ -115,7 +115,7 @@
                                 </div>
                             </div>
                             <div class="box-body">
-                                <div class="row">
+                                <div class="row w-100">
                                     <div class="col-6">
                                         <div class="row">
                                             <div class="col-6">
@@ -193,7 +193,7 @@
                                 </div>
                             </div>
                             <div class="box-body">
-                                <div class="row">
+                                <div class="row w-100">
                                     <div class="col-5">
                                         <div class="row">
                                             <div class="col-6">
@@ -267,7 +267,7 @@
                                 </div>
                             </div>
                             <div class="box-body">
-                                <div class="row">
+                                <div class="row w-100">
                                     <div class="col-6">
                                         <div class="row">
                                             <div class="col-6">
