--- a/expert/templates/expert/questions.html
+++ b/expert/templates/expert/questions.html
@@ -15,7 +15,8 @@
     <div class="row">
         <div class="col-12 text-right">
             <h3 class="h3 p-top-15 {% if not research_questions %}border-bottom{% endif %}">سوالات پژوهشی</h3>
-            <button class="add-new-question top-page-button border-button" data-toggle="modal" data-target="#addNewQuestion">
+            <button class="add-new-question top-page-button border-button" data-toggle="modal"
+                    data-target="#addNewQuestion">
                 <i class="fas fa-plus"></i>
                 <span>ثبت سوال جدید</span>
             </button>
@@ -51,7 +52,9 @@
                             <div class="card active-question box flow-root-display w-100">
                                 <div class="box-header">
                                     <h6>{{ research_question.question_title }}</h6>
-                                    <span class="active-status"></span>
+                                    <div class="box-option-container">
+                                        <span class="active-status"></span>
+                                    </div>
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
@@ -78,7 +81,8 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-3">
-                                            <button class="default-btn show-btn" id="{{ research_question.id }}" data-toggle="modal" data-target="#showQuestion">
+                                            <button class="default-btn show-btn" id="{{ research_question.id }}"
+                                                    data-toggle="modal" data-target="#showQuestion">
                                                 مشاهده
                                             </button>
                                         </div>
@@ -89,7 +93,9 @@
                             <div class="card check-question box flow-root-display w-100">
                                 <div class="box-header">
                                     <h6>{{ research_question.question_title }}</h6>
-                                    <span class="check-status"></span>
+                                    <div class="box-option-container">
+                                        <span class="check-status"></span>
+                                    </div>
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
@@ -116,7 +122,8 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-3">
-                                            <button class="default-btn show-btn" id="{{ research_question.id }}" data-toggle="modal" data-target="#showQuestion">
+                                            <button class="default-btn show-btn" id="{{ research_question.id }}"
+                                                    data-toggle="modal" data-target="#showQuestion">
                                                 مشاهده
                                             </button>
                                         </div>
@@ -127,7 +134,9 @@
                             <div class="card close-question box flow-root-display w-100">
                                 <div class="box-header">
                                     <h6>{{ research_question.question_title }}</h6>
-                                    <span class="answered-status"></span>
+                                    <div class="box-option-container">
+                                        <span class="answered-status"></span>
+                                    </div>
                                 </div>
                                 <div class="box-body">
                                     <div class="row">
@@ -154,7 +163,8 @@
                                             </div>
                                         </div>
                                         <div class="col-md-6 col-3">
-                                            <button class="default-btn show-btn" id="{{ research_question.id }}" data-toggle="modal" data-target="#showQuestion">
+                                            <button class="default-btn show-btn" id="{{ research_question.id }}"
+                                                    data-toggle="modal" data-target="#showQuestion">
                                                 مشاهده
                                             </button>
                                         </div>
@@ -172,7 +182,8 @@
                         <img src="{% static 'img/empty_question.svg' %}" alt="">
                         <h5>اولین سوال خود را طرح کنید!</h5>
                         <pre>با کلیک بر روی دکمه زیر می توانید اولین سوال پژوهشی خود را به آسانی بسازید.</pre>
-                        <button class="add-new-question border-button" data-toggle="modal" data-target="#addNewQuestion">
+                        <button class="add-new-question border-button" data-toggle="modal"
+                                data-target="#addNewQuestion">
                             <i class="fas fa-plus"></i>
                             <span>ثبت سوال جدید</span>
                         </button>
