--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6882,23 +6882,57 @@ pre[contenteditable="true"] {
 
 .tagId-list.inline-list li {
     float: right;
+    display: flex;
+    position: relative;
 }
 
 .tagId-list .tagId-item {
     background-color: #f5f6f7;
     margin-left: 0.25rem;
-    padding: 0.15rem 0.5rem;
+    padding: 0 0.5rem 0 0;
     border-radius: 5rem;
+}
+
+.tagId-list .tagId-item img:hover {
+    cursor: pointer;
+}
+
+.tagId-list .tagId-item .tagId-item-info div {
+    max-width: 100px;
+    overflow-x: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .tagId-list .tagId-item svg.bi-x {
     border-radius: 50%;
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 46px;
+    height: 46px;
+    color: #ff4545;
+    transform: rotateZ(80deg);
+    transition: transform 0.3s;
 }
 
-.tagId-list .tagId-item svg.bi-x:hover {
-    color: #ffffff;
-    background-color: #ff4545;
+.tagId-list .tagId-item:hover svg.bi-x {
     cursor: pointer;
+    display: block;
+    visibility: visible;
+    transform: rotateZ(0);
+}
+
+.tagId-list .tagId-item:hover img:after {
+   content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000000;
+    opacity: 0.5;
 }
 
 .dropdown-item.selected {
