--- a/templates/feedBack.html
+++ b/templates/feedBack.html
@@ -2,29 +2,25 @@
 {% load static %}
 
 {% block content %}
-  <form method="POST">
-    {% csrf_token %}
-    <div class="row">
-        {{ form.email }}
-    </div>
-    <div class="row">
-        {{ form.opinion }}
-    </div>
-    <div class="row">
-        {{ form.captcha }}
-    </div>
-    <button type="submit">submit</button>
-  </form>
+    <form method="POST">
+        {% csrf_token %}
+        <div class="row">
+            {{ form.email }}
+        </div>
+        <div class="row">
+            {{ form.opinion }}
+        </div>
+        <div class="row">
+            {{ form.captcha }}
+        </div>
+        <button type="submit">submit</button>
+    </form>
 {% endblock content %}
 
 {% block script %}
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
-{% endblock script %}<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
-<script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+    <script src="{% static 'libs/jQuery/3.5.1/jquery.min.js' %}"></script>
+    <script src="{% static 'libs/Propper/1.14.7/popper.min.js' %}"></script>
+    <script src="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
+{% endblock script %}
