--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -7,14 +7,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <link rel="icon" sizes="16*16" href="{% static 'img/circle_logo.png' %}">
     <title>ورود</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/css/iziToast.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-    {#    <link rel="stylesheet" href="{% static 'css/style1.css' %}">#}
+    <link rel="stylesheet" href="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'fonts/fontawesome/5.15.1/css/all.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/iziToast/1.4.0/iziToast.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.css' %}">
+    <link rel="stylesheet" href="{% static 'libs/OwlCarousel2/2.3.4/owl.theme.default.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <style>
         ::-webkit-scrollbar {
@@ -219,12 +216,11 @@
     {#        </p>#}
     {#    </div>#}
 </div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
-<script type="text/javascript"
-        src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="{% static 'libs/jQuery/3.5.1/jquery.min.js' %}"></script>
+<script src="{% static 'libs/Propper/1.14.7/popper.min.js' %}"></script>
+<script src="{% static 'libs/Bootstrap/4.5.0/bootstrap.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'libs/iziToast/1.4.0/iziToast.min.js' %}"></script>
+<script type="text/javascript" src="{% static 'libs/OwlCarousel2/2.3.4/owl.carousel.min.js' %}"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script type="text/javascript" src="{% static 'js/script-functions.js' %}"></script>
 <script type="text/javascript" src="{% static 'js/script.js' %}"></script>
