--- a/templates/registration/projectRequest_template.html
+++ b/templates/registration/projectRequest_template.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -5,8 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>ایمیل چمران تیم</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-          integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'fonts/fontawesome/5.15.1/css/all.min.css' %}">
 </head>
 <body style="box-sizing:border-box;
              color:#555;
@@ -69,7 +69,6 @@
         <td style="background: #f7fdf8">
             <p style="color: #484848;margin: 5px;font-family: tahoma;">ما را دنبال کنید</p>
             <p style="color: #999999;margin: 5px;font-family: tahoma;">حساب‌های چمران تیم در شبکه‌های اجتماعی</p>
-            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
             <ul style="padding: 0;
     margin: 0;
     list-style: none;">
